--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,8 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": false,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true   ,
-    "typeRoots": ["./src/@types", "node_modules/@types"]                              /* Skip type checking all .d.ts files. */
+    "typeRoots": ["./src/@types", "node_modules/@types"],
+    "declaration": true,
+    "outDir": "dist"                             /* Skip type checking all .d.ts files. */
   }
 }
