--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child src/server.ts",
-    "start": "node dist/index.js", 
-    "postinstall": "tsc", 
-    "watch-node": "nodemon dist/index.js", 
+    "start": "node dist/server.js", 
+    "build": "tsc",
+    "postinstall": "yarn build", 
+    "watch-node": "nodemon dist/server.js", 
     "watch-ts": "tsc - w", 
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
