--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child src/server.ts",
-    "start": "node dist/server.js", 
-    "build": "tsc",
-    "postinstall": "yarn build", 
-    "watch-node": "nodemon dist/server.js", 
-    "watch-ts": "tsc - w", 
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
-  },
+    "start": "ts-node src/server.ts"
+    },
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "axios": "^0.27.2",
