--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child src/server.ts",
-    "start": "ts-node src/server.ts"
+    "build": "tsc --build tsconfig.json",
+    "start": "node dist/server.js"
     },
   "dependencies": {
     "@prisma/client": "^3.14.0",
